<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffffff"
    tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/canvasFrame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/sunset"
        android:elevation="8dp"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="20dp">

<!--        <ImageView-->
<!--            android:layout_marginTop="20dp"-->
<!--            android:id="@+id/py"-->
<!--            android:layout_width="220dp"-->
<!--            android:layout_height="50dp"-->
<!--            android:src="@drawable/titulo"-->

<!--            />-->

        <emperatriz.pypots.CanvasView
            android:id="@+id/canvasView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp" />
    </LinearLayout>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/cbNumeroNotificaciones"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="5dp"
                android:padding="10dp"
                android:text="@string/cbNumeroNotificaciones"
                android:textSize="14dp" />

            <CheckBox
                android:id="@+id/cbNotificacionesNoLeidas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="5dp"
                android:padding="10dp"
                android:text="@string/cbNotificacionesNoLeidas"
                android:textSize="14dp" />

<!--            <CheckBox-->
<!--                android:id="@+id/cbPasos"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_margin="12dp"-->
<!--                android:layout_marginTop="5dp"-->
<!--                android:padding="10dp"-->
<!--                android:text="@string/cbPasos"-->
<!--                android:textSize="14dp" />-->

            <CheckBox
                android:id="@+id/cbTorch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="5dp"
                android:padding="10dp"
                android:textSize="14dp"
                android:text="@string/cbTorch" />

            <CheckBox
                android:id="@+id/cbDND"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="5dp"
                android:padding="10dp"
                android:textSize="14dp"
                android:text="@string/cbDND" />

            <CheckBox
                android:id="@+id/cbHalo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="5dp"
                android:padding="10dp"
                android:textSize="14dp"
                android:text="@string/cbHalo" />

<!--                        <TextView-->
<!--                            android:id="@+id/divisionesTxt"-->
<!--                            android:layout_width="match_parent"-->
<!--                            android:layout_height="wrap_content"-->
<!--                            android:layout_marginLeft="25dp"-->
<!--                            android:layout_marginRight="25dp"-->
<!--                            android:layout_marginBottom="10dp"-->
<!--                            android:layout_marginTop="5dp"-->
<!--                            android:textColor="#000000"-->
<!--                            android:gravity="center"-->
<!--                            android:text="@string/partes" />-->

<!--                        <Spinner-->
<!--                            android:id="@+id/divisiones"-->
<!--                            android:layout_width="match_parent"-->
<!--                            android:layout_height="wrap_content"-->
<!--                            android:layout_marginLeft="25dp"-->
<!--                            android:layout_marginRight="25dp"-->
<!--                            android:layout_marginBottom="10dp"-->
<!--                            android:layout_marginTop="5dp"-->
<!--                            android:entries="@array/ceroseis" />-->

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="5dp"
                android:padding="10dp"
                android:text="@string/textview"
                android:textColor="#888888"

                android:textSize="14dp" />

        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#66dd99"
        android:padding="10dp"
        android:text="@string/conectando_reloj"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="18dp" />
</LinearLayout>